# noid

./: .gitignore  .pre-commit-config.yaml  .prettierrc  CLAUDE.md  Cargo.toml  JSONLD_VALIDATION.md  NOID_SPACES_IMPLEMENTATION_PLAN.md  README.md  build.ninja  pyproject.toml  validate_jsonld.py
_old/: pyproject.toml
_old/docs/: croissant_tips.md  datasources_specification.md  design.md  devlog.md  id_naming_convention.md
_old/schemas/: README.md  dataset.v0.schema.json  dataset_data_model.md  dataset_specification.md
_old/tests/: __init__.py  test_spaces.py  test_transforms.py  test_validation.py
assets/: example.landsat.json
docs/: coordinate_spaces_design.md  croissant_tips.md  design.md  devlog.md  dimension-identity-namespacing-rfc.md  ideas.md  schema development key findings.md
docs/assets/: arrays-as-spatial-data.html
examples/: coordinate_spaces.json  coordinate_transforms_table.json  display_coordinate_transforms.py  display_transforms.py  transforms.json  transforms_table.json
examples/0_transforms/: display_transforms.py  transforms.json  transforms_new.json  transforms_table.json  transforms_table_new.json
examples/1_coordinate_transforms/: README.md  coordinate_transforms.json  coordinate_transforms_table.json  croissant.json  display_coordinate_transforms.py
examples/2_coordinate_spaces/: coordinate_spaces_table.json  display_coordinate_spaces.py
examples/3_coordinate_spaces/: separated_spaces_transforms.json
schemas/: coordinate_spaces.jsonld  coordinate_spaces.ttl  coordinate_spaces_validation.ttl  dataset.v0.schema.json  dataset_data_model.md  dataset_specification.md  mdarray.json
schemas/datasources/: notes.md
schemas/sampler/: v0.linkml.yaml
schemas/space/: v0.linkml.yaml
schemas/spaces/: spaces.v0.schema.json  spaces_specification.md  vocabulary.jsonld
schemas/transform/: v0.linkml.yaml
schemas/transforms/: context.json  croissant_example.json  deployment_guide.md  index.html  terms.json  transforms.v0.schema.json  transforms_data_model.md  transforms_specification.md  vocabulary.jsonld  vocabulary.jsonld.json  vocabulary.ttl
src/: __init__.py
src/noid/: __init__.py  _schema.py  schema.py  transforms.py  validation.py
tests/: test_spaces.py  test_transforms.py  test_validation.py
tests/data/: invalid_dimension_missing_name.jsonld  invalid_homogeneous_missing_matrix.jsonld  invalid_translation_missing_property.jsonld  (+4 more)
transforms/: build.py  pyproject.toml  samplers.linkml.yaml  transforms.linkml.yaml
transforms/_old/: transforms.v0.schema.json
transforms/_out/: sampler.context.jsonld  samplers.context.jsonld  samplers.schema.json  transform.context.jsonld  transform.schema.json  transforms.context.jsonld  transforms.schema.json
transforms/_out/docs/: Boolean.md  CoordinateLookupTable.md  Curie.md  Date.md  DateOrDatetime.md  Datetime.md  Decimal.md  DisplacementConfig.md  DisplacementLookupTable.md  Double.md  ExtrapolationMethod.md  Float.md  Homogeneous.md  Identity.md  Integer.md  InterpolationMethod.md  Jsonpath.md  Jsonpointer.md  LookupTableConfig.md  MapAxis.md  Ncname.md  Nodeidentifier.md  Objectidentifier.md  SamplerConfig.md  Scale.md  Sparqlpath.md  String.md  Time.md  Transform.md  Translation.md  Uri.md  Uriorcurie.md  displacements.md  extrapolation.md  index.md  interpolation.md  lookup_table.md  map_axis.md  path.md  samplers.md  (+1 more)
transforms/_out/json-schema/: transforms.schema.json
transforms/_out/jsonld-context/: transforms.context.jsonld
transforms/_out/python/: sampler.py  samplers.py  transform.py  transforms.py
transforms/docs/: transforms_data_model.md  transforms_specification.md
transforms/examples/: pyld_compact_example.py  sequences.jsonld  transforms.json  transforms.jsonld  transforms.toml  transforms.yaml  usage_examples.py
transforms/src/noid_transforms/: LIBRARY_EXTRACTION.md  __init__.py  abbreviation.py  factory.py  jsonld_processing.py  models.py  registry.py  serialization.py  validation.py
transforms/tests/: __init__.py  test_adapter.py  test_factory.py  test_integration.py  test_models.py  test_registry.py  test_validation.py
(+38 files in other folders)
