[project]
name = "noid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nathan Clack", email = "nclack@chanzuckerberg.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mlcroissant",
 "rich",
 "pytest",
 "rdflib",
 "setuptools",
 "pyshacl",
 "pyld>=2.0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/noid"]

[project.scripts]
