[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.12.4",
    "pre-commit>=3.0.0",
    "python-lsp-server>=1.7.0",
]

[tool.uv.workspace]
members = [
    "packages/noid-registry",
    "packages/noid-transforms",
    "packages/noid-spaces",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
